# demo-kafka-rust

./: .gitignore  README.md  docker-compose.yml
consumer/: Cargo.toml
consumer/src/: main.rs
producer/: Cargo.toml
producer/src/: main.rs
