[package]
name = "consumer"
version = "0.1.0"
edition = "2024"

[dependencies]
rdkafka = "0.36"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
influxdb2 = "0.5"
reqwest = { version = "0.11", features = ["json"] }
